--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ openai==1.14.3
 packaging==24.0
 pydantic==2.6.4
 pydantic_core==2.16.3
+python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
 sniffio==1.3.1
